infra/envoy/envoy.yaml
node:
  id: local-ingress
  cluster: api-gateway-ingress

static_resources:
  listeners:
    - name: public_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: public_https
                use_remote_address: true
                route_config:
                  name: gateway_routes
                  virtual_hosts:
                    - name: gateway
                      domains: ["*"]
                      request_headers_to_remove:
                        - x-gateway-client-cert-sha256
                      request_headers_to_add:
                        - header:
                            key: x-gateway-client-cert-sha256
                            value: "%DOWNSTREAM_PEER_FINGERPRINT_256%"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: x-forwarded-proto
                            value: https
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: gateway
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: false
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                tls_certificate_sds_secret_configs:
                  - name: ingress_server_certificate
                    sds_config:
                      path_config_source:
                        path: /etc/envoy/sds/server-certificate.yaml
                        watched_directory:
                          path: /etc/envoy/sds
                validation_context_sds_secret_config:
                  name: client_validation_context
                  sds_config:
                    path_config_source:
                      path: /etc/envoy/sds/client-validation.yaml
                      watched_directory:
                        path: /etc/envoy/sds

  clusters:
    - name: gateway
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gateway
                      port_value: 3000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
